2007-04-21  David Hampton  <hampton@employees.org>

	* Disable the close callback while updating reports.  Fixes #416986.

2007-04-21  Andreas Köhler  <andi5.py@gmx.net>

	* Use correct mnemonic widget for "_Parent Account" in account dialog
	  #431963.

2007-04-21  Christian Stimming  <stimming@tuhh.de>

	* Fix missing exchange rate dialog on purchasing stocks. bug#335101.
	  Patch by Mike Alexander

2007-04-21  Christian Stimming  <stimming@tuhh.de>

	* Use aqbanking's FiId field for correct OFX duplicate matching.
	  #418072, patch by David Reiser.

2007-04-21  David Hampton  <hampton@employees.org>

	* Add some begin_edit/commit_edit checks.

2007-04-21  Derek Atkins  <derek@ihtfp.com>

	* Phil Longstaff's patch to fix a kvp_frame bug.
	  Save the current frame so we know where to build the new one.

2007-04-21  David Hampton  <hampton@employees.org>

	* Fix window corruption problems when adding prices to the price
	  database. (#376298)

2007-04-21  Andreas Köhler  <andi5.py@gmx.net>

	* Remove viewport/hbox from account scrolls in transfer dialog.
	  Fixes #425917.

	  The scrolled windows for "transfer to" and "transfer from" now
	  take the treeviews directly and do not pack them into viewports,
	  letting them actually scroll the scrolled window.

2007-04-21  Joshua Sled  <jsled@asynchronous.org>

	* Bug#343795: Be explicit about number of months so auto-decimal-point
	  doesn't bite us.
	  Patch from Jerry Quinn <mailto:jlquinn@optonline.net>.

2007-04-20  Benoit Grégoire <bock@step.polymtl.ca>
	* src/import-export/qif-import/test/Makefile.am: Fix compile 
	problem on Ubuntu.

2007-04-04  Christian Stimming  <stimming@tuhh.de>

	* po/hu.po: Update Hungarian translation by Takó Kornél
	<takokornel@gmail.com> which is now much more proof-read than the
	previous one.

2007-04-03  Christian Stimming  <stimming@tuhh.de>

	* po/uk.po: Almost complete Ukrainian translation by Maxim
	V. Dziumanenko

2007-03-30  Christian Stimming <stimming@tuhh.de>
