@@ -1,3 +1,11 @@
+2007-05-13  David Hampton  <hampton@employees.org>
+
+	* Suspend qof events for the interval between swapping the books
+	  between two sessions, and installing the new session as the
+	  current session.  The books end up same before and after, but
+	  there is small interval in the middle where any call to get the
+	  current book will get bogus results.  Fixes #414783.
+
 2007-04-21  David Hampton  <hampton@employees.org>
 
 	* Disable the close callback while updating reports.  Fixes #416986.
